2.5.6 (19.08.2019):

* Prevent Negate from changing the alpha channel. 
  Thanks to Chris Mayo for the patch. Closes merge request #25
* Avoid image corruption with colour images when applying WhiteThreshold
  after BlackThreshold.
  Thanks to Chris Mayo for the patch. Closes merge request #26


2.5.5 (19.07.2019):

* Fix occasional error messages when clearing all pages
* Only set paper to Manual if not applying profile
* Update OCR view switching between pages with and without OCR output
* xz compress log file if xz available
* Fix bug applying paper after profile set SANE_INFO_INEXACT
* When saving current settings as new profile, actually set the profile
* If a device throws an error when opening it, add it to a session blacklist
* + option tolerance to cover buggy backends that return inexact options
  without setting SANE_INFO_INEXACT
* Update to Hungarian translation (thanks to csola)
* Update to German translation (thanks to Stephan Woidowski)
* Update to Spanish translation (thanks to rodroes)


2.5.4 (20.06.2019):

* Fix bug applying paper whilst setting profile
* Fix canvas usage in scan dialog.
* Allow tabs to be scrolled to reduce width of scan dialog.
* Restore split screen view for image and OCR output.
* Update to Hungarian translation (thanks to csola)
* Update to German translation (thanks to Stephan Woidowski)
* Update to Swedish translation (thanks to Anders Jonsson)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.5.3 (20.05.2019):

* Split up messages from gimp and unpaper to allow them to be ignored more
  easily. Closes bug #321
  (Error messages when returning from editing a scanned document using gimp)
* Trap invalid dates in metadata.
  Closes bug #323 (Crash when saving with invalid date)
* Use GTK's FontChooserDialog for selecting font for OCR output in PDF
* Moved font discovery to program start to accelerate display of save dialog
* Removed owner password, as it does not encrypt.